# app.maskai

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  deploy.sh  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py  6a17dee42721_add_vector_embeddings.py
backend/: auth.py  config.py  database.py  main.py  mcp_server.py  sync.py
backend/email/: __init__.py  gmail.py  outlook.py
backend/embeddings/: __init__.py  sentence_transformers.py
backend/interfaces/: __init__.py  email_provider.py  embedding_model.py  oauth_provider.py  payment_provider.py  vector_store.py
backend/oauth/: __init__.py  google_oauth.py  microsoft_oauth.py
backend/payments/: __init__.py  stripe_provider.py
backend/vector/: __init__.py  pgvector.py
do/: app.yaml
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
tests/: conftest.py  test_auth.py  test_gmail.py  test_mcp.py
