[project]
name = "maskai"
version = "0.1.0"
description = "MCP server for email intelligence with Gmail and Microsoft Graph"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.5,<3.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "aiosqlite>=0.20,<1.0",
    "alembic>=1.13,<2.0",
    "python-jose[cryptography]>=3.3,<4.0",
    "bcrypt>=4.0,<5.0",
    "authlib>=1.3,<2.0",
    "httpx>=0.27,<1.0",
    "stripe>=8.0,<12.0",
    "python-multipart>=0.0.10",
    "cryptography>=43.0,<45.0",
]

[project.optional-dependencies]
ml = [
    "sentence-transformers>=3.0,<4.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "ruff>=0.7",
    "mypy>=1.10",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
